<resources>
    <string name="app_name">WeConnect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--  Content Description  -->
    <string name="main_admin_button">Enter Admin Page</string>
    <string name="main_volunteer_button">Enter Volunteer Page</string>
    <string name="logo">WeConnect Logo</string>

    <!--  Main Page  -->
    <string name="main_admin_text">Admin</string>
    <string name="main_volunteer_text">Volunteer</string>
    <string name="first_half_name">WeCo</string>
    <string name="second_half_name">nnect</string>

    <!--  Volunteer Home Page  -->
    <string name="take_survey_button">Take the survey</string>

</resources>