<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/right_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="206dp"
        android:background="@color/pink_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <View
        android:id="@+id/left_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/right_box"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:background="@color/transparency"
        android:contentDescription="@string/main_admin_button"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/left_box"
        app:layout_constraintRight_toRightOf="@id/left_box"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_page_button_pink" />

    <ImageButton
        android:id="@+id/right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:background="@color/transparency"
        android:contentDescription="@string/main_volunteer_button"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/right_box"
        app:layout_constraintRight_toRightOf="@id/right_box"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_page_button_white" />

    <TextView
        android:id="@+id/admin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/main_admin_text"
        android:textColor="@color/pink_2"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/left_box"
        app:layout_constraintRight_toRightOf="@id/left_box"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/volunteer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/main_volunteer_text"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/right_box"
        app:layout_constraintRight_toRightOf="@id/right_box"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_half_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/first_half_name"
        android:textColor="@color/red_1"
        android:textSize="48sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_toRightOf="@id/left_box"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/second_half_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/second_half_name"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintLeft_toLeftOf="@id/right_box"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="750dp"
        android:contentDescription="@string/logo"
        android:scaleX="0.3"
        android:scaleY="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>